- [Feature] Provide a proxy-icon for the connection in the title bar. The icon can then be dragged to the Bookmark drawer or to the Finder as a .duck file.
- [Feature] Support for Novell Netware file listings (FTP)
- [Bugfix] Bookmark drawer icon has no text-only equivalent
- [Bugfix] Tabbing between browser and filter box
- [Bugfix] Quick Connect Field has initial focus

2.3.3
- [Bugfix] Correctly parsing symbolic links

2.3.2
- [Feature] Slovak Localization
- [Feature] Czech Localization
- [Feature] Support for EPFL file listings to support servers running "publicfile" (FTP)
- [Bugfix] Improved PASV response parsing (FTP)
- [Feature] Supporting SOCKS proxies (not tested)
- [Feature] Change file permissions on multiple files
- [Feature] Copy the URL of a remote site
- [Bugfix] Use date formatting rules set in the System Preferences
- [Featuer] Preference item to set the action when double-clicking files (Download or edit)
- [Bugfix] Remembering the position of the browser window
- [Bugfix] Compatibility with servers not supporting the SIZE command (FTP)

2.3.1
- [Feature] Chinese (Simplified) Localization
- [Feature] Rendezvous services in Bookmark menu
- [Bugfix] Upper level directories had to be listed first when uploading files
- [Bugfix] Changes to bookmarks won't be saved
- [Feature] Preference item to disable the update check
- [Feature] Toolbar item to open downloaded files with default application
- [Feature] Graceful application termination (Properly ask to close all connections and then quit)
- [Bugfix] Remembering choosen directories in open and save dialogs

2.3
- [Feature] Finnish Localization
- [Feature] Supporting Keyboard Interactive (PAM) Authentication (SSH)
- [Bugfix] not all available Rendezvous services were listed
- [Bugfix] Removed 'Type ahead' feature of the browser (responsible for frequent crashes)

2.3b2
- [Feature] Much improved queue management (fewer connections)
- [Feature] Resume downloads (SFTP)
- [Feature] Resume uploads (SFTP)