@@ -21,6 +21,7 @@
 - [Bugfix] Bookmark drawer icon has no text-only equivalent
 - [Bugfix] Tabbing between browser and filter box
 - [Bugfix] Quick Connect Field has initial focus
+- [Bugfix] HTTP download broken
 
 2.3.3
 - [Bugfix] Correctly parsing symbolic links
